add html content

--- a/quiz1.html
+++ b/quiz1.html
@@ -9,6 +9,7 @@
       <h2>Which person is Marty?</h2>
       <div class="picture"></div>
       <div class="picture"></div>
+      <a href="quiz2.html"><button type="button" name="button">Next</button></a>
     </div>
 
   </body>
