add layout for index and start adding layout to profile form

--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
   <head>
     <meta charset="utf-8">
     <title>Icepick Game</title>
+    <link rel="stylesheet" href="public/css/main.css" media="screen" title="no title" charset="utf-8">
   </head>
   <body>
-    <div class="container">
-      <a href="quiz1.html"><button type="button" name="button">Take Quiz</button></a>
-      <a href="profile.html"><button type="button" name="button">Create Profile</button></a>
+    <div class="index-container">
+      <a href="quiz1.html"><button class="index-button-to-quiz" type="button" name="button">Take Quiz</button></a>
+      <a href="profile.html"><button  class="index-button-to-profile" type="button" name="button">Create Profile</button></a>
     </div>
 
   </body>
