--- a/profile2.html
+++ b/profile2.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Start Quiz</title>
+    <link rel="stylesheet" href="public/css/main.css" media="screen" title="no title" charset="utf-8">
   </head>
   <body>
     <h1>Thank you for creating a profile!</h1>
