--- a/profile.html
+++ b/profile.html
@@ -3,45 +3,60 @@
   <head>
     <meta charset="utf-8">
     <title>Create Profile</title>
+    <link rel="stylesheet" href="public/css/main.css" media="screen" title="no title" charset="utf-8">
   </head>
   <body>
-    <header>
-      <p>Your answers will be shared with classmates. Feel free to answer only questions you are comfortable sharing with.</p>
-    </header>
-    <div class="container">
-      <form class="create-profile">
-        <label for="first name">First Name:</label>
-        <input type="text" name="name" value="">
-        <label for="last name">Last Name:</label>
-        <input type="text" name="name" value="">
-        <label for="track">Your Track:</label>
-        <select>
-          <option>Ruby</option>
-          <option>C#</option>
-          <option>CSS</option>
-          <option>Android</option>
-        </select>
-        <label for="transport">How to you get to school?</label>
-        <select>
-          <option>By bike</option>
-          <option>By bus</option>
-          <option>By MAX</option>
-          <option>Walking</option>
-          <option>Driving</option>
-        </select>
-        <label for="lunch">Do you bring your lunch or go to the food carts?</label>
-        <select>
-          <option>I bring lunch</option>
-          <option>Go to food carts</option>
-          <option>50:50</option>
-        </select>
-        <label for="bathroom">Have you been to the 9th floor bathroom?</label>
-        <select>
-          <option>Yes</option>
-          <option>No</option>
-        </select>
-        <a href="profile2.html"><button id="submit-form" type="submit" name="button">Submit</button></a>
-      </form>
+    <div class="profile-wrap">
+      <header>
+        <p>Your answers will be shared with classmates. Feel free to answer only questions you are comfortable sharing with.</p>
+      </header>
+      <div class="profile-container">
+        <form class="create-profile">
+          <div class="form-group">
+            <label for="first name">First Name:</label>
+            <input type="text" name="name" value="">
+          </div>
+          <div class="form-group">
+            <label for="last name">Last Name:</label>
+            <input type="text" name="name" value="">
+          </div>
+          <div class="form-group">
+            <label for="track">Your Track:</label>
+            <select class="track">
+              <option>Ruby</option>
+              <option>C#</option>
+              <option>CSS</option>
+              <option>Android</option>
+            </select>
+          </div>
+          <div class="form-group">
+            <label for="transport">How to you get to school?</label>
+            <select>
+              <option>By bike</option>
+              <option>By bus</option>
+              <option>By MAX</option>
+              <option>Walking</option>
+              <option>Driving</option>
+            </select>
+          </div>
+          <div class="form-group">
+            <label for="lunch">Do you bring your lunch or go to the food carts?</label>
+            <select>
+              <option>I bring lunch</option>
+              <option>Go to food carts</option>
+              <option>50:50</option>
+            </select>
+          </div>
+          <div class="form-group">
+            <label for="bathroom">Have you been to the 9th floor bathroom?</label>
+            <select>
+              <option>Yes</option>
+              <option>No</option>
+            </select>      
+          </div>
+          <a href="profile2.html"><button id="submit-form" type="button" name="button">Submit</button></a>
+        </form>
+      </div>
     </div>
   </body>
 </html>
