--- a/quiz1.html
+++ b/quiz1.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Quiz</title>
+    <link rel="stylesheet" href="public/css/main.css" media="screen" title="no title" charset="utf-8">
   </head>
   <body>
     <div class="container">
