--- a/result.html
+++ b/result.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Result page</title>
+    <link rel="stylesheet" href="public/css/main.css" media="screen" title="no title" charset="utf-8">
   </head>
   <body>
     <h1>Thank you for taking the quiz!</h1>
