add basic layout

--- a/profile.html
+++ b/profile.html
@@ -52,7 +52,11 @@
             <select>
               <option>Yes</option>
               <option>No</option>
-            </select>      
+            </select>
+          </div>
+          <div class="form-group">
+            <label for="height">How tall are you?</label>
+            <input type="number" name="name" value="">   
           </div>
           <a href="profile2.html"><button id="submit-form" type="button" name="button">Submit</button></a>
         </form>
