--- a/quiz6.html
+++ b/quiz6.html
@@ -7,12 +7,12 @@
   </head>
   <body>
     <div class="quiz-container">
-      <h2>Which person goes to food carts?</h2>
+      <h2>Which person rides their bike to school?</h2>
       <div class="quiz-pictures">
         <div class="picture"></div>
         <div class="picture"></div>
       </div>
-      <a href="quiz3.html"><button class="next" type="button" name="button">Next</button></a>
+      <a href="result.html"><button class="next" type="button" name="button">Next</button></a>
     </div>
   </body>
 </html>
