--- a/result.html
+++ b/result.html
@@ -6,8 +6,10 @@
     <link rel="stylesheet" href="public/css/main.css" media="screen" title="no title" charset="utf-8">
   </head>
   <body>
-    <h1>Thank you for taking the quiz!</h1>
-    <p>You know your classmates 80%</p>
-    <a href="quiz1.html"><button type="button" name="button">Take the quiz again!</button></a>
+    <div class="result-container">
+      <h1>Thank you for taking the quiz!</h1>
+      <p>You know your classmates 80%</p>
+      <a href="quiz1.html"><button class="start-quiz-button" type="button" name="button">Take the quiz again!</button></a>  
+    </div>
   </body>
 </html>
