--- a/profile2.html
+++ b/profile2.html
@@ -6,7 +6,9 @@
     <link rel="stylesheet" href="public/css/main.css" media="screen" title="no title" charset="utf-8">
   </head>
   <body>
-    <h1>Thank you for creating a profile!</h1>
-    <a href="quiz1.html"><button type="button" name="button">Take the Quiz!</button></a>
+    <div class="profile2-container">
+      <h1>Thank you for creating a profile!</h1>
+      <a href="quiz1.html"><button class="start-quiz-button" type="button" name="button">Take the Quiz!</button></a>
+    </div>
   </body>
 </html>
