--- a/quiz1.html
+++ b/quiz1.html
@@ -6,11 +6,13 @@
     <link rel="stylesheet" href="public/css/main.css" media="screen" title="no title" charset="utf-8">
   </head>
   <body>
-    <div class="container">
+    <div class="quiz-container">
       <h2>Which person is Marty?</h2>
-      <div class="picture"></div>
-      <div class="picture"></div>
-      <a href="quiz2.html"><button type="button" name="button">Next</button></a>
+      <div class="quiz-pictures">
+        <div class="picture"></div>
+        <div class="picture"></div>
+      </div>
+      <a href="quiz2.html"><button class="next" type="button" name="button">Next</button></a>
     </div>
 
   </body>
