--- a/quiz3.html
+++ b/quiz3.html
@@ -6,12 +6,13 @@
     <link rel="stylesheet" href="public/css/main.css" media="screen" title="no title" charset="utf-8">
   </head>
   <body>
-    <div class="container">
-      <h2>Which person learns C#?</h2>
-      <div class="picture"></div>
-      <div class="picture"></div>
-      <a href="quiz4.html"><button type="button" name="button">Next</button></a>
+    <div class="quiz-container">
+      <h2>Which person is doing C#?</h2>
+      <div class="quiz-pictures">
+        <div class="picture"></div>
+        <div class="picture"></div>
+      </div>
+      <a href="quiz4.html"><button class="next" type="button" name="button">Next</button></a>
     </div>
-
   </body>
 </html>
