add questions table and refactor question routing

--- a/raw_html/quiz5.html
+++ b/raw_html/quiz5.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <div class="quiz-container">
-      <h2>Which person is taller?</h2>
+      <h2>Which person plays pokemon?</h2>
       <div class="quiz-pictures">
         <div class="picture"></div>
         <div class="picture"></div>
